--- a/web/app/themes/sskotz v2/templates/archive.twig
+++ b/web/app/themes/sskotz v2/templates/archive.twig
@@ -1,9 +1,6 @@
-{# This file demonstrates using most of the index.twig template and modifying 
-   just a small part. See `search.twig` for an example of another approach #}
-
-{% extends "index.twig" %}
-
-{% block content %}
-  <h3>This is my archive</h3>
-  {{ parent() }}
+{% extends "base.twig" %}
+{% block head %}
+	{{ parent() }}
+	<link rel="stylesheet" href="{{ site.theme.link }}//assets/css/archive.css" type="text/css" media="screen"/>
 {% endblock %}
+{% block content %}{% endblock %}
