--- a/web/app/themes/sskotz v2/templates/base.twig
+++ b/web/app/themes/sskotz v2/templates/base.twig
@@ -5,6 +5,68 @@
 <body class="{{body_class}}" data-template="base.twig">
     <div class="wrapper">
         <div class="canvas">
+            <!-- MODALS -->
+            <!-- Paypal modal -->
+            <div class="modal fade" id="paypal-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header border-0 pb-0">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body pb-4 pt-0">
+                            <div class="container">
+                                <div class="row text-center">
+                                    <div class="col-12 mb-1">
+                                        <h2>Doação através do PAYPAL</h2>
+                                        <p>
+                                            O trabalho é feito totalmente sem ajuda de custo, no entanto deixamos esse espaço aberto para o caso de alguém desejar realizar alguma contribuição para o grupo. Agradecemos desde já.
+                                        </p>
+                                    </div>
+                                    <div class="col-12 m-auto">
+                                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                                            <input type="hidden" name="cmd" value="_s-xclick" />
+                                            <input type="hidden" name="hosted_button_id" value="5SHKJSW8W2GY6" />
+                                            <input type="image" src="{{ site.theme.link }}/assets/images/paypal-donate.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Faça doações com o botão do PayPal" class="img-fluid" width="200" />
+                                            <img alt="Botão de doação paypal" border="0" src="{{ site.theme.link }}/assets/images/paypal-donate.png" width="1" height="1" class="img-fluid" />
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- PicPay modal -->
+            <div class="modal fade" id="picpay-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header border-0 pb-0">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body pb-4 pt-0">
+                            <div class="container">
+                                <div class="row text-center">
+                                    <div class="col-12 mb-1">
+                                        <h2>Doação através do PICPAY</h2>
+                                        <p>
+                                            O trabalho é feito totalmente sem ajuda de custo, no entanto deixamos esse espaço aberto para o caso de alguém desejar realizar alguma contribuição para o grupo. Agradecemos desde já.
+                                        </p>
+                                    </div>
+                                    <div class="col-12 m-auto">
+                                        <img src="{{ site.theme.link }}/assets/images/picpay-qrcode.png" class="img-fluid" width="200" alt="Botão do picpay" />
+                                        <p class="mb-0">@isac.santana10</p>
+                                        <a href="https://picpay.me/isac.santana10" target="_blank" alt="Link para doação no picpay">https://picpay.me/isac.santana10</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <header class="header">
                 {% block header %}
                 <div class="wrapper">
@@ -12,7 +74,7 @@
                         <div class="fixed-top">
                             <nav class="navbar nav-sub navbar-expand-lg" id="nav-sub">
                                 <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item text-center time-block">
+                                    <li class="nav-item text-center time-block" style="width:150px">
                                         <a class="nav-link">
                                             <small>Horario do Servidor</small><br>
                                             <span>
@@ -40,18 +102,13 @@
                                     <li class="nav-item align-self-center">
                                         <ul class="float-right list-unstyled d-flex">
                                             <li class="d-inline-block px-2">
-                                                <a href="#">
-                                                    <img src="{{ site.theme.link }}/assets/images/ppay-icon.png" width="20" class="m-auto">
+                                                <a href="#picpay-modal" data-toggle="modal" alt="Abrir menu de doação picpay">
+                                                    <img src="{{ site.theme.link }}/assets/images/ppay-icon.png" width="20" class="m-auto" alt="Icone do picpay">
                                                 </a>
                                             </li>
                                             <li class="d-inline-block px-2">
-                                                <a href="#">
-                                                    <img src="{{ site.theme.link }}/assets/images/paypal-icon.png" width="20" class="m-auto">
-                                                </a>
-                                            </li>
-                                            <li class="d-inline-block px-2">
-                                                <a href="#">
-                                                    <img src="{{ site.theme.link }}/assets/images/patreon-icon.png" width="20" class="m-auto">
+                                                <a href="#paypal-modal" data-toggle="modal" alt="Abrir menu de doação paypal">
+                                                    <img src="{{ site.theme.link }}/assets/images/paypal-icon.png" width="20" class="m-auto" alt="Icone do paypal">
                                                 </a>
                                             </li>
                                         </ul>
@@ -60,31 +117,35 @@
                             </nav>
                         </div>
                         <nav class="navbar navbar-expand-lg nav-main bg-inverse navbar-inverse justify-content-lg-center justify-content-start" id="nav-main">
-                            <a class="navbar-toggler float-right menu-link border-0" style="z-index: 10000;" id="toggle-sidenav" href="#menu">
+                            <a class="navbar-toggler float-right menu-link border-0" style="z-index: 1031;" id="toggle-sidenav">
                                 <i class="fas fa-bars icon-menu"></i>
                             </a>
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav mx-auto text-md-center text-left">
+                            <div class="navbar-collapse left collapse justify-content-end">
+                                <ul class="nav navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Início</a>
+                                        <a class="nav-link" href="#" alt="Ir para pagina inicial">Início</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Guias</a>
+                                        <a class="nav-link" href="#" alt="Ir para pagina novidades">Novidades</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Novidades</a>
+                                        <a class="nav-link" href="#" alt="Ir para pagina guias">Guias</a>
                                     </li>
-                                    <li class="nav-item my-auto">
-                                        <a class="nav-link navbar-brand mx-0 d-none d-md-inline" href=""><img src="{{ site.theme.link }}/assets/images/logo.png" width="150" class="m-auto"></a>
+                                </ul>
+                            </div>
+                            <a class="navbar-brand mx-auto px-4 d-none d-lg-flex" href="#" alt="Ir para pagina inicial">
+                                <img src="{{site.theme.link}}/assets/images/logo.png" class="img-fluid" width="90" alt="Logo do site">
+                            </a>
+                            <div class="navbar-collapse right collapse justify-content-start">
+                                <ul class="nav navbar-nav w-100">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#" alt="Ir para pagina cosmos">Cosmos</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Cosmos</a>
+                                        <a class="nav-link" href="#" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Cavaleiros</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Contato</a>
+                                        <a class="nav-link" href="#" alt="Ir para pagina contato">Contato</a>
                                     </li>
                                 </ul>
                             </div>
@@ -92,20 +153,17 @@
                                 <div class="sidenav-body my-auto">
                                     <ul class="sidenav-ul list-unstyled">
                                         <li class="sidenav-logo text-center mb-3">
-                                            <a href="#"><img src="{{ site.theme.link }}/assets/images/logo.png" class="img-fluid" width="150"></a>
+                                            <a href="#" class="Ir para pagina inicial"><img src="{{ site.theme.link }}/assets/images/logo.png" class="img-fluid" width="150" alt="Logo do site"></a>
                                         </li>
                                         <li class="sidenav-donate text-center align-self-center justify-content-center">
                                             <span>Faça sua doação</span>
                                             <ul class="list-unstyled d-flex" style="width: 250px;">
                                                 <li class="d-inline-block px-2 d-flex" style="width: 250px;">
-                                                    <a href="#" class="d-inline-block m-auto text-center">
-                                                        <img src="{{ site.theme.link }}/assets/images/ppay-icon.png" width="20" class="m-auto">
+                                                    <a href="#picpay-modal" data-toggle="modal" class="d-inline-block m-auto text-center" alt="Abrir menu de doação picpay">
+                                                        <img src="{{ site.theme.link }}/assets/images/ppay-icon.png" width="20" class="m-auto" alt="Icone picpay">
                                                     </a>
-                                                    <a href="#" class="d-inline-block m-auto text-center">
+                                                    <a href="#paypal-modal" data-toggle="modal" class="d-inline-block m-auto text-center" alt="Abrir menu de doação paypal">
                                                         <img src="{{ site.theme.link }}/assets/images/paypal-icon.png" width="20" class="m-auto">
-                                                    </a>
-                                                    <a href="#" class="d-inline-block m-auto text-center">
-                                                        <img src="{{ site.theme.link }}/assets/images/patreon-icon.png" width="20" class="m-auto">
                                                     </a>
                                                 </li>
                                             </ul>
@@ -114,19 +172,19 @@
                                             <span>Principal</span>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#">Início</a>
+                                            <a class="sidenav-link" href="#" alt="Ir para pagina inicial">Início</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#">Novidades</a>
+                                            <a class="sidenav-link" href="#" alt="Ir para pagina novidades">Novidades</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#">Cosmos</a>
+                                            <a class="sidenav-link" href="#" alt="Ir para pagina cosmos">Cosmos</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#">Cavaleiros</a>
+                                            <a class="sidenav-link" href="#" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#">Contato</a>
+                                            <a class="sidenav-link" href="#" alt="Ir para pagina contato">Contato</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -141,7 +199,7 @@
                                             </div>
                                         </li>
                                         <li class="nav-item text-center time-block">
-                                            <a class="nav-link">
+                                            <a class="nav-link" alt="Horario de servidor do jogo">
                                                 <small>Horario do Servidor</small><br>
                                                 <span>
 													<span id="server-time"></span> UTC (-05:00)
@@ -162,27 +220,50 @@
                 {% endblock %}
             </header>
             <main>
-                <div class="wrapper">
-                    {% block content %} Sorry, no content {% endblock %}
-                </div>
-                {% if sidebar %}
-                <aside class="layout-sidebar">
-                    {{sidebar}}
-                </aside>
-                {% endif %}
+                {% block content %} {% endblock %}
             </main>
             {% block footer %}
-            <footer id="footer">
-                {% include 'footer.twig' %}
+            <footer id="sticky-footer" class="py-4">
+                <div class="container text-center">
+                    <ul class="list-inline">
+                        <li class="list-inline-item p-3">
+                            <a href="#" alt="Ir para pagina inicial">Início</a>
+                        </li>
+                        <li class="list-inline-item p-3">
+                            <a href="#" alt="Ir para pagina guias">Guias</a>
+                        </li>
+                        <li class="list-inline-item p-3">
+                            <a href="#" alt="Ir para pagina novidades">Novidades</a>
+                        </li>
+                        <li class="list-inline-item p-3">
+                            <a href="#" alt="Ir para pagina cosmos">Cosmos</a>
+                        </li>
+                        <li class="list-inline-item p-3">
+                            <a href="#" alt="Ir para pagina cavaleiros">Cavaleiros</a>
+                        </li>
+                        <li class="list-inline-item p-3">
+                            <a href="#" alt="Ir para pagina contato">Contato</a>
+                        </li>
+                    </ul>
+                    <hr>
+                    <small>Este é um site feito de fã para fãs. O conteúdo introduzido no mesmo tem o objeito de ajudar os outros jogadores.</small><br>
+                    <small>Copyright &copy; 1998 - 2020 Tencent. Todos os direitos reservados.</small>
+                </div>
             </footer>
+            <!-- Footer -->
             {{ function('wp_footer') }} {% endblock %}
         </div>
     </div>
+
+    {% block script %}
 
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/jquery/jquery.min.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/popperjs/popper.min.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/js/main.js"></script>
+
+    {% endblock %}
+
 </body>
 
 </html>
