--- a/web/app/themes/sskotz v2/templates/html-header.twig
+++ b/web/app/themes/sskotz v2/templates/html-header.twig
@@ -10,6 +10,12 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="{{ site.theme.link }}/assets/css/style.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="{{ site.theme.link }}/assets/lib/bootstrap/css/bootstrap.min.css" type="text/css" media="screen">
+    <meta name="description" content="">
+    <meta name="keywords" content="Saint seiya awakening, sskotz, saint seiya mobile, saint seiya tencent, saint seiya tips, saint seiya mobile, saint seiya online, saint seiya db, saint seiya guides, cavaleiros do zodiaco mobile, cavaleiros do zodiaco, cavaleiros do zodiaco tencent">
+    <meta name="robots" content="">
+    <meta name="revisit-after" content="1 day">
+    <meta name="language" content="Portuguese">
+    <meta name="generator" content="N/A">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
