--- a/web/app/themes/sskotz v2/templates/single.twig
+++ b/web/app/themes/sskotz v2/templates/single.twig
@@ -1,39 +1,48 @@
-{% extends "base.twig" %}
-
-{% block content %}
-	<div class="content-wrapper">
-		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-			<img src="{{ post.thumbnail.src|resize(1200, 300) }}">
-			<section class="article-content">
-				<h1 class="article-h1">{{ post.title }}</h1>
-				<a href="{{ post.link }}">{{ _e('edit') }}</a>
-				<p class="blog-author">
-					<span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> {{ post.date }}
-				</p>
-				<div class="article-body">
-					{{post.content}}
-				</div>
-			</section>
-
-			<!-- comment box -->
-			<section class="comment-box">
-				<!-- comments -->
-				<div class="comments">
-				    {% if post.comments %}
-					<h3> comments </h3>
-					{% for cmt in post.comments %}
-					    {% include "comment.twig" with {comment:cmt} %}
-					{% endfor %}
-				    {% endif %}
-				</div>
-
-				{% if post.comment_status == "closed" %}
-					<p> comments for this post are closed </p>
-				{% else %}
-				    <!-- comment form -->
-				    {% include "comment-form.twig" %}
-				{% endif %}
-			</section>
-		</article>
-	</div><!-- /content-wrapper -->
+{% extends "base.twig" %} {% block head %} {{ parent() }}
+<link rel="stylesheet" href="{{ site.theme.link }}/assets/css/post.css" type="text/css" media="screen" /> {% endblock %}{% block content %}
+<section>
+    <div class="container mt-lg-5 mt-3">
+        <div class="row justify-content-center">
+            <article class="post-full w-100">
+                <header class="post-full-header">
+                    <div class="post-byline mb-3">
+                        <div class="row">
+                            <div class="col-12 col-sm-6 text-center text-sm-left">
+                                {% for category in cats %} {% if category.slug != 'spotlight' %}
+                                <span class="{{category.slug}}-tag post-tag">{{ category.name }} </span> {% endif %} {% endfor %}
+                            </div>
+                            <div class="col-12 col-sm-6 float-sm-right text-center text-sm-right mt-2 mt-sm-0">
+                                <span class="post-date">{{ post.date }}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <h1 class="post-title text-center">{{ post.title }}</h1>
+                    <div class="col-12 mt-3 px-0">
+                        <img src="{{ post.thumbnail }}" class="img-fluid" alt="Imagems destaque da postagem {{ post.title }}" />
+                    </div>
+                </header>
+                <div class="post-full-content">
+                    {{ post.content }}
+                </div>
+                <div class="post-full-footer">
+                    <div class="content">
+                        <div class="author-card d-flex">
+                            <img src="{{ post.author.avatar }}" class="author-profile-image" alt="Foto de {{ post.author.name }}" />
+                            <div class="author-card-content">
+                                <h4 class="author-card-name">
+                                    <a href="{{ post.author.link }}" alt="Link para conhecer o author da postagem">{{ post.author.name }}</a>
+                                </h4>
+                                <p>{{ author.roles }}</p>
+                            </div>
+                        </div>
+                        <div class="author-more">
+                            <a class="author-card-button" href="{{ post.author.link }}" alt="Ver mais">Ver mais</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </div>
+</section>
+<!-- /content-wrapper -->
 {% endblock %}
