--- a/web/app/themes/sskotz v2/templates/base.twig
+++ b/web/app/themes/sskotz v2/templates/base.twig
@@ -123,29 +123,29 @@
                             <div class="navbar-collapse left collapse justify-content-end">
                                 <ul class="nav navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#" alt="Ir para pagina inicial">Início</a>
+                                        <a class="nav-link" href="{{ site.link }}" alt="Ir para pagina inicial">Início</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#" alt="Ir para pagina novidades">Novidades</a>
+                                        <a class="nav-link" href="{{ site.link }}/news/" alt="Ir para pagina novidades">Novidades</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#" alt="Ir para pagina guias">Guias</a>
+                                        <a class="nav-link" href="{{ site.link }}/guides/" alt="Ir para pagina guias">Guias</a>
                                     </li>
                                 </ul>
                             </div>
-                            <a class="navbar-brand mx-auto px-4 d-none d-lg-flex" href="#" alt="Ir para pagina inicial">
+                            <a class="navbar-brand mx-auto px-4 d-none d-lg-flex" href="{{ site.link }}" alt="Ir para pagina inicial">
                                 <img src="{{site.theme.link}}/assets/images/logo.png" class="img-fluid" width="90" alt="Logo do site">
                             </a>
                             <div class="navbar-collapse right collapse justify-content-start">
                                 <ul class="nav navbar-nav w-100">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#" alt="Ir para pagina cosmos">Cosmos</a>
+                                        <a class="nav-link" href="{{ site.link }}/cosmos/" alt="Ir para pagina cosmos">Cosmos</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#" alt="Ir para pagina cavaleiros">Cavaleiros</a>
+                                        <a class="nav-link" href="{{ site.link }}/characters/" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#" alt="Ir para pagina contato">Contato</a>
+                                        <a class="nav-link" href="{{ site.link }}/contact/" alt="Ir para pagina contato">Contato</a>
                                     </li>
                                 </ul>
                             </div>
@@ -153,7 +153,7 @@
                                 <div class="sidenav-body my-auto">
                                     <ul class="sidenav-ul list-unstyled">
                                         <li class="sidenav-logo text-center mb-3">
-                                            <a href="#" class="Ir para pagina inicial"><img src="{{ site.theme.link }}/assets/images/logo.png" class="img-fluid" width="150" alt="Logo do site"></a>
+                                            <a href="{{ site.link }}" class="Ir para pagina inicial"><img src="{{ site.theme.link }}/assets/images/logo.png" class="img-fluid" width="150" alt="Logo do site"></a>
                                         </li>
                                         <li class="sidenav-donate text-center align-self-center justify-content-center">
                                             <span>Faça sua doação</span>
@@ -172,19 +172,19 @@
                                             <span>Principal</span>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#" alt="Ir para pagina inicial">Início</a>
+                                            <a class="sidenav-link" href="{{ site.link }}" alt="Ir para pagina inicial">Início</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#" alt="Ir para pagina novidades">Novidades</a>
+                                            <a class="sidenav-link" href="{{ site.link }}/news/" alt="Ir para pagina novidades">Novidades</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#" alt="Ir para pagina cosmos">Cosmos</a>
+                                            <a class="sidenav-link" href="{{ site.link }}/guides/" alt="Ir para pagina cosmos">Cosmos</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#" alt="Ir para pagina cavaleiros">Cavaleiros</a>
+                                            <a class="sidenav-link" href="{{ site.link }}/characters/" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="#" alt="Ir para pagina contato">Contato</a>
+                                            <a class="sidenav-link" href="{{ site.link }}/contact/" alt="Ir para pagina contato">Contato</a>
                                         </li>
                                     </ul>
                                 </div>
